--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
     <meta charset="UTF-8">
     <title>column-preview-content</title>
-    <link rel="stylesheet" href="styles/Styles.css">
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
     <div class="main-div">
 <div class="sedans-div">
-<img class=image src="images/icon-sedans.svg" >
+<img class=image src="icon-sedans.svg" >
 
 
 <h1 >SEDANS</h1>
@@ -22,7 +22,7 @@
 <button class="button1">Learn More</button>
 </div>
 <div class="suvs-div">
-<img src="images/icon-suvs.svg" alt="no images">
+<img src="icon-suvs.svg" alt="no images">
 <h1>SUVS</h1>
 <p>  Take a SUV for its spacious 
     interior, power, and <br> 
@@ -34,7 +34,7 @@
 </div>
 
 <div class="luxury-div">
-<img src="images/icon-luxury.svg">
+<img src="icon-luxury.svg">
 <h1>LUXURY</h1>
 <p>
      Cruise in the best car brands<br>
